--- a/portfolio.html
+++ b/portfolio.html
@@ -55,35 +55,37 @@
         </div>
     </section>
 
-    <section class="section-cite container-grid animar-aleatorio">
+    <section class="section-cite">
+        <div class="container-grid animar-aleatorio">
 
-        <ul class="rslides">
-            <li>
-                <blockquote class="depoimento-portfolio">
-                    <p>“Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o
-                        meu
-                        amor por esta atividade. Recomendo à todos que amo.”</p>
-                    <cite class="autor-cite-portfolio grid-12">Bianca Lima</cite>
-                </blockquote>
-            </li>
+            <ul class="rslides">
+                <li>
+                    <blockquote class="depoimento-portfolio">
+                        <p>“Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o
+                            meu
+                            amor por esta atividade. Recomendo à todos que amo.”</p>
+                        <cite class="autor-cite-portfolio grid-12">Bianca Lima</cite>
+                    </blockquote>
+                </li>
 
-            <li>
-                <blockquote class="depoimento-portfolio">
-                    <p>“Aqueles que ainda não possuem uma Bikcraft, não sabem o que estão perdendo. A precisão é
-                        absurda e a velocidade transcendental. Nunca vida nada igual.”</p>
-                    <cite class="autor-cite-portfolio grid-12">Renata Alves</cite>
-                </blockquote>
-            </li>
+                <li>
+                    <blockquote class="depoimento-portfolio">
+                        <p>“Aqueles que ainda não possuem uma Bikcraft, não sabem o que estão perdendo. A precisão é
+                            absurda e a velocidade transcendental. Nunca vida nada igual.”</p>
+                        <cite class="autor-cite-portfolio grid-12">Renata Alves</cite>
+                    </blockquote>
+                </li>
 
-            <li>
-                <blockquote class="depoimento-portfolio">
-                    <p>“Nada melhor do que dar um rolê com a minha Bikcraft na orla. Essa é a minha companheira
-                        mais
-                        fiel, nunca me traiu e está sempre a minha disposição.”</p>
-                    <cite class="autor-cite-portfolio grid-12">Jhony Rato</cite>
-                </blockquote>
-            </li>
-        </ul>
+                <li>
+                    <blockquote class="depoimento-portfolio">
+                        <p>“Nada melhor do que dar um rolê com a minha Bikcraft na orla. Essa é a minha companheira
+                            mais
+                            fiel, nunca me traiu e está sempre a minha disposição.”</p>
+                        <cite class="autor-cite-portfolio grid-12">Jhony Rato</cite>
+                    </blockquote>
+                </li>
+            </ul>
+        </div>
     </section>
 
 
@@ -202,8 +204,8 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="/libs/jquery-3.6.0.min.js"><\/script>')</script>
-    <script src="/js/plugins.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
